--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+
+    <!--responsividade-->
+    <link rel="stylesheet" href="css/responsive.css">
+    <!-- OWL CSS  -->
+    <link rel="stylesheet" href="css/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl/owl.theme.default.min.css">
+
+
     <title>NETFLIX CLONE</title>
 </head>
 <body>
@@ -27,15 +35,66 @@
                 <p class="descricao">Kaizoku Sentai: Ten Gokaiger é um filme de super-herói japonês que serve como comemoração do 10º aniversário do episódio final de Kaizoku Sentai Gokaiger.</p>
                 <div class="botoes">
                     <button role="button" class="botao">
-                        ASSISTIR AGORA
+                        <i class="fas fa-play"></i>
+                       ASSISTIR AGORA
                     </button>
                     <button role="button" class="botao">
+                        <i class="fas fa-info-circle"></i>
                         MAIS INFORMAÇÕES
                     </button>
                 </div>
              </div>
         </div>
     </main>
+    <div class="carrosel-filmes">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-filme" src="img/mini01.jpeg" >
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini02.jpg" >
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini03.jpg" >
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini04.jpg" >
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini05.jpg" >
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini06.jpg" >
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini07.jpg" >
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini08.jpg" >
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini09.jpg" >
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini10.jpg" >
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini11.jpg" >
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini12.jpg" >
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini13.jpg" >
+            </div>
+            
+        </div>
+    </div>
+
+    <script src="https://kit.fontawesome.com/3a7ba63bbf.js" crossorigin="anonymous"></script>
+    <script src="js/owl/jquery.min.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/owl/main.js"></script>
 
 
 </body>
